[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Player/Run0.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Player/Run4.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/Jump0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/Run2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Idle0.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Run1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Run7.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Jump3.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/Run3.png" type="Texture" id=9]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=10]
[ext_resource path="res://Dirt Autotile and Sky/Sky.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/Jump1.png" type="Texture" id=12]
[ext_resource path="res://icon.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 7 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Jump2",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 16.0
height = 28.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -25 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 640, 640 )

[node name="Sky" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 11 )
centered = false

[node name="RightWall" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 20 )

[node name="LeftWall" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 20 )

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="GhostTimer" to="." method="_on_GhostTimer_timeout"]
